# dbt-spark

./: .bumpversion-dbt.cfg  .bumpversion.cfg  .changie.yaml  .dockerignore  .env_example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.MD  CONTRIBUTING.md  Dockerfile  Dockerfile.spark  MANIFEST.in  Makefile  Pipfile  README.md  azure-pipelines.yml  build-requirements.txt  catalog-info.yaml  dbt-spark-livy-Notice.txt  dev-requirements.txt  dev_requirements.txt  docker-compose.yml  hatch.toml  output.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.env  test.env.example  tox.ini
.changes/: 0.0.0.md  1.0.0.md  1.0.1.md  1.0.2-rc0.md  1.0.2.md  1.1.0.md  1.1.1-rc0.md  1.1.1.md  1.2.0.md  1.2.1-rc0.md  1.2.1.md  1.3.0-b1.md  1.3.0-b2.md  1.3.0-rc1.md  1.3.0-rc2.md  1.3.0.md  1.3.1-rc1.md  1.3.1.md  1.3.2.md  1.3.3.md  1.4.0-a1.md  1.4.0-b1.md  1.4.0-rc1.md  1.4.0.md  1.4.1-rc0.md  1.4.1.md  1.4.2.md  1.4.3.md  1.5.0-a1.md  1.5.0-b1.md  1.5.0-b2.md  1.5.0-b3.md  (+34 more)
dbt-spark/: docker-compose.yml  hatch.toml  pyproject.toml
dbt-spark/.changes/: header.tpl.md
dbt-spark/.changes/unreleased/: Under the Hood-20241207-181814.yaml
dbt-spark/dagger/: run_dbt_spark_tests.py
dbt-spark/dagger/scripts/: install_os_reqs.sh
dbt-spark/dagger/spark-container/: entrypoint.sh
dbt-spark/docker/: Dockerfile
dbt-spark/scripts/: update_dependencies.sh
dbt-spark/src/dbt/adapters/spark/: python_submissions.py  relation.py
dbt-spark/src/dbt/include/spark/: dbt_project.yml
dbt-spark/src/dbt/include/spark/macros/utils/: escape_single_quotes.sql
dbt-spark/tests/functional/adapter/: test_get_columns_in_relation.py  test_grants.py  test_simple_seed.py
dbt-spark/tests/functional/adapter/empty/: test_empty.py
dbt-spark/tests/functional/adapter/incremental/: test_incremental_merge_exclude_columns.py
dbt-spark/tests/functional/adapter/incremental_strategies/: test_microbatch.py
dbt-spark/tests/functional/adapter/seed_column_types/: test_seed_column_types.py
dbt-spark/tests/functional/adapter/utils/: fixture_listagg.py  test_timestamps.py
dbt-spark/tests/unit/: conftest.py  test_macros.py
(+523 files in other folders)
